feat: updating newer instructions
